<resources>
    <string name="app_name">Scribble</string>
    <string name="title_activity_home_drawer">HomeDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="email_string">Email</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_to_app_text">New to Scribble? Sign Up.</string>
    <string name="how_was_your_day">How was your day???</string>
    <string name="name">Name:</string>
    <string name="already_have_an_account">Already have an account? Sign in!</string>
</resources>