<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.itl.scribble.fragments.CreateOrEditNoteFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.itl.scribble.fragments.OldPostListFragments"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_oldPosts" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.itl.scribble.fragments.ProfileFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_profile" />
</navigation>