<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighterGrey"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.Login">


    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/small_margin"
        app:layout_constraintBottom_toTopOf="@id/submitLoginBtn"
        app:layout_constraintEnd_toEndOf="@id/textInputLayout_email"
        app:layout_constraintStart_toStartOf="@id/textInputLayout_email"/>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/email_string"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/textInputLayout_email"
        app:layout_constraintStart_toStartOf="@id/textInputLayout_email"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:textColor="@color/black"
        android:id="@+id/submitLoginBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@id/textInputLayout_password"
        app:layout_constraintStart_toStartOf="@id/textInputLayout_password"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_password" />

    <TextView
        android:id="@+id/linkToSingup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/inverted_orange"
        android:text="@string/new_to_app_text"
        app:layout_constraintEnd_toEndOf="@id/submitLoginBtn"
        app:layout_constraintStart_toStartOf="@id/submitLoginBtn"
        app:layout_constraintTop_toBottomOf="@id/submitLoginBtn" />


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/guideline"
        app:layout_constraintGuide_percent="0.2"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>